--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar scroll</a>
+              <a class="navbar-brand" href="#"><img src="assets/images/weather-icon.png">Rain er No!</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -66,9 +66,8 @@
                   <li><a class="dropdown-item" href="#">Location 3</a></li>
                   <li><a class="dropdown-item" href="#">Location 4</a></li>
                 </ul>
-              </div>
-        
-              </div>
+            </div>
+        </div>
     </main>
 
     <!-- Script for Bootstrap -->
