todays and 4 day forecast layout set

--- a/index.html
+++ b/index.html
@@ -61,7 +61,16 @@
             </div>
         </div>
       </div>
-
+      <section>
+        <div class="container">
+          <div id="today-weather" class="row justify-content-center mb-4">
+              <!-- Today's weather will be inserted here -->
+          </div>
+          <div id="forecast-section" class="row justify-content-center">
+              <!-- Forecast cards will be inserted here -->
+          </div>
+      </div>
+      </section>
       <section id="forecast-section">
         <div class="container-fluid">
             <div class="row justify-content-center">
@@ -129,6 +138,8 @@
                 </div>
             </div>
         </div>
+
+
       </section>
       <section id="wear-section">
         <div>
