add shadows to weather cards, add shadows to weather cards

--- a/index.html
+++ b/index.html
@@ -71,59 +71,69 @@
                       <h2>4 Day Forecast Section</h2>
                     </div>
                 </div>
-                <div class="card mx-3 my-3" style="width: 18rem;">
+                <div class="card mx-3 my-3 shadow" style="width: 18rem;">
                     <img src="assets/images/clear.png" class="card-img-top" alt="cartoon sunshine">
                     <div class="card-body">
                       <h5 class="card-title">Today: Sunny!</h5>
                       <p class="card-text">
                         Temperature:
+                        <br>
                         Wind Speed:
+                        <br>
                         Humidity:
                       </p>
                     </div>
                 </div>
             </div>
             <div class="row justify-content-center">
-                <div class="card mx-3 my-3" style="width: 18rem;">
+                <div class="card mx-3 my-3 shadow" style="width: 18rem;">
                     <img src="assets/images/rain.png" class="card-img-top" alt="cartoon rain cloud">
                     <div class="card-body">
                       <h5 class="card-title">Tomorrow: Rainy</h5>
                       <p class="card-text">
                         Temperature:
+                        <br>
                         Wind Speed:
+                        <br>
                         Humidity:
                       </p>
                     </div>
                 </div>
-                <div class="card mx-3 my-3" style="width: 18rem;">
+                <div class="card mx-3 my-3 shadow" style="width: 18rem;">
                     <img src="assets/images/snow.png" class="card-img-top" alt="cartoon snow cloud">
                     <div class="card-body">
                       <h5 class="card-title">X-day: Snowy</h5>
                       <p class="card-text">
                         Temperature:
+                        <br>
                         Wind Speed:
+                        <br>
                         Humidity:
                       </p>
                     </div>
                 </div>
-                <div class="card mx-3 my-3" style="width: 18rem;">
+                <div class="card mx-3 my-3 shadow" style="width: 18rem;">
                     <img src="assets/images/storm.png" class="card-img-top" alt="cartoon storm cloud">
                     <div class="card-body">
                       <h5 class="card-title">Y-day: Stormy</h5>
                       <p class="card-text">
                         Temperature:
+                        <br>
                         Wind Speed:
+                        <br>
                         Humidity:
                       </p>
                     </div>
                 </div>
-                <div class="card mx-3 my-3" style="width: 18rem;">
+                <div class="card mx-3 my-3 shadow" style="width: 18rem;">
                     <img src="assets/images/sunandcloud.png" class="card-img-top" alt="cartoon sun and cloud">
                     <div class="card-body">
                       <h5 class="card-title">Z-day: Sun and clouds</h5>
                       <p class="card-text">
                         Temperature:
+                        <br>
                         Wind Speed:
+                        <br>
                         Humidity:
                       </p>
                     </div>
