add value into search bar, remove empty cards, run button press on page load

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                     <form class="d-flex" role="search">
                         <input
                           class="form-control me-2"
+                          value="United Kingdom"
                           type="search"
                           placeholder="Search Location"
                           aria-label="Search"
@@ -58,91 +59,17 @@
           <div id="today-weather" class="row justify-content-center mb-4">
               <!-- Today's weather will be inserted here -->
           </div>
+          <div class="col-12">
+            <div class="d-flex justify-content-center">
+              <h2>4 Day Forecast</h2>
+            </div>
+          </div>
             <div id="forecast-section" class="row justify-content-center">
               <!-- Forecast cards will be inserted here -->
             </div>
       </div>
       </section>
-      <section id="forecast-section">
-        <div class="container-fluid">
-            <div class="row justify-content-center">
-                <div class="col-12">
-                    <div class="d-flex justify-content-center">
-                      <h2>4 Day Forecast Section</h2>
-                    </div>
-                </div>
-                <div class="card mx-3 my-3 shadow" style="width: 18rem;">
-                    <img src="assets/images/clear.png" class="card-img-top" alt="cartoon sunshine">
-                    <div class="card-body">
-                      <h5 class="card-title">Today: Sunny!</h5>
-                      <p class="card-text">
-                        Temperature:
-                        <br>
-                        Wind Speed:
-                        <br>
-                        Humidity:
-                      </p>
-                    </div>
-                </div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="card mx-3 my-3 shadow" style="width: 18rem;">
-                    <img src="assets/images/rain.png" class="card-img-top" alt="cartoon rain cloud">
-                    <div class="card-body">
-                      <h5 class="card-title">Tomorrow: Rainy</h5>
-                      <p class="card-text">
-                        Temperature:
-                        <br>
-                        Wind Speed:
-                        <br>
-                        Humidity:
-                      </p>
-                    </div>
-                </div>
-                <div class="card mx-3 my-3 shadow" style="width: 18rem;">
-                    <img src="assets/images/snow.png" class="card-img-top" alt="cartoon snow cloud">
-                    <div class="card-body">
-                      <h5 class="card-title">X-day: Snowy</h5>
-                      <p class="card-text">
-                        Temperature:
-                        <br>
-                        Wind Speed:
-                        <br>
-                        Humidity:
-                      </p>
-                    </div>
-                </div>
-                <div class="card mx-3 my-3 shadow" style="width: 18rem;">
-                    <img src="assets/images/storm.png" class="card-img-top" alt="cartoon storm cloud">
-                    <div class="card-body">
-                      <h5 class="card-title">Y-day: Stormy</h5>
-                      <p class="card-text">
-                        Temperature:
-                        <br>
-                        Wind Speed:
-                        <br>
-                        Humidity:
-                      </p>
-                    </div>
-                </div>
-                <div class="card mx-3 my-3 shadow" style="width: 18rem;">
-                    <img src="assets/images/sunandcloud.png" class="card-img-top" alt="cartoon sun and cloud">
-                    <div class="card-body">
-                      <h5 class="card-title">Z-day: Sun and clouds</h5>
-                      <p class="card-text">
-                        Temperature:
-                        <br>
-                        Wind Speed:
-                        <br>
-                        Humidity:
-                      </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-     
+      
     </main>
 
     <footer>Footer Placeholder Text</footer>
