--- a/index.html
+++ b/index.html
@@ -72,7 +72,17 @@
       
     </main>
 
-    <footer>Footer Placeholder Text</footer>
+    <footer>
+      <div class="container-fluid">
+        <div class="row justify-content-center">
+          <div class="col-12">
+            <div class="d-flex justify-content-center">
+              <p>&copy; 2021 Rain er No! All rights reserved.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <!-- Script for Bootstrap -->
     <script
