Add CSS styling

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="container-fluid justify-content-center">
             <a class="navbar-brand d-flex align-items-center justify-content-center" href="#">
             <img src="assets/images/weather-icon.png" style="width: 100px; height: 100px; margin-right: 10px;">
-            <h1>Rain er No!</h1>
+            <h1 id="page-title">Rain er No!</h1>
             </a>
           
         </div>
@@ -46,7 +46,7 @@
                           aria-label="Search"
                           id="location-input"
                         />
-                        <button class="btn btn-outline-success" type="button" id="search-button">
+                        <button class="btn btn-primary" type="button" id="search-button">
                           GO!
                         </button>
                       </form>
